--- a/styles/global.css
+++ b/styles/global.css
@@ -1,9 +1,10 @@
 /*global.css*/
 :root {
-    --background: #EBEBEB;
-    --text: #242424;
-    --secondary: #CDCDCD;
-    --accent: #00A863;
+    --text: #f0f0f0;
+    --background: #171717;
+    --primary: #e9e9e9;
+    --secondary: #2fff9d;
+    --accent: #7f7f7f;
     --font-family: 'Poppins', sans-serif;
 }
 
@@ -17,10 +18,6 @@ body {
     margin: 0;
     padding: 0;
 }
-
-/* p {
-
-} */
 
 /* h1,
 h2,
@@ -46,15 +43,7 @@ a {
 /*Semantic Styling*/
 
 header {
-    background-color: var(--text);
-}
-
-nav {
-
-}
-
-main {
-
+    background-color: rgb(6, 6, 6);
 }
 
 footer {
@@ -69,17 +58,16 @@ footer {
 
     /* Nav Styling*/
 
-    .conn-container {
-        
-
+    .default {
+        cursor: default;
     }
 
     .conn-left {
-        
+        transition: 1s;
     }
 
     .conn-right {
-
+        transition: 1s;
     }
 
 
